--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     width: 100vw;
     position: absolute;
     transform: translateX(100%);
+    padding-left: 2vw;
 }
 
 #config-menu {
@@ -139,4 +140,14 @@ input::-webkit-inner-spin-button {
 
 #back-btn:hover {
     cursor: pointer;
+}
+
+#key-btn {
+    background-color: var(--bg-color);
+    border-color: var(--primary-color);
+    color: var(--primary-color);
+}
+
+#key-img {
+    width: 50%;
 }
